[package]
name = "data_hoover_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.0"
actix-cors = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = { version = "3.0.1", features = ["sync", "bson-uuid"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
